--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                         <a class="nav-link text-dark"href="#">Services</a>
                         </li>
                         <li class="nav-item">
+                        <a class="nav-link text-dark"href="#">blocg</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark  dropdown-toggle" href="#" id="navbardrop" data-bs-toggle="dropdown">Dropdown</a>
                             <div class="dropdown-menu dropdown-menu-end">
                                 <a class="dropdown-item" href="#">LOAN</a>
